--- a/templates/files-in-same-commit-graph.html
+++ b/templates/files-in-same-commit-graph.html
@@ -115,8 +115,8 @@ const graph = {
         {"source": 18, "target": 27, "value": 3},
         {"source": 24, "target": 32, "value": 3},
         {"source": 17, "target": 32, "value": 3},
-        {"source": 4, "target": 17, "value": 3},
-        {"source": 4, "target": 35, "value": 3},
+        {"source": 4, "target": 17, "value": 13},
+        {"source": 4, "target": 35, "value": 23},
         {"source": 19, "target": 35, "value": 3},
         {"source": 19, "target": 46, "value": 3},
         {"source": 12, "target": 46, "value": 3},
@@ -154,7 +154,6 @@ function createForcesGraphOn(elementId, graph) {
     function createQuickFindIndex(graph) {
         var quickFind = new QuickFind(graph.nodes.length);
         graph.links.forEach(function (link) {
-            // "index" property is added by d3js force layout
             quickFind.connect(graph.nodes.indexOf(link.source), graph.nodes.indexOf(link.target));
         });
         return quickFind;
@@ -323,11 +322,11 @@ function createForcesGraphOn(elementId, graph) {
     span.append("span").style({width: "20px", display: "inline-block"});
 
     span.append("label").html("Min cluster size: ");
-    var dropDown = span.append("select");
-    for (var i = 2; i < 11; i++) {
-        dropDown.append("option").attr("value", i).html(i);
-    }
-    dropDown.on("change", function() {
+    var clusterSizeDropDown = span.append("select");
+    d3.range(2, 11).forEach(function (i) {
+        clusterSizeDropDown.append("option").attr("value", i).html(i);
+    });
+    clusterSizeDropDown.on("change", function() {
         updateSelection([], showLongFileNames);
         tooltip.style("opacity", .0);
 
@@ -337,6 +336,16 @@ function createForcesGraphOn(elementId, graph) {
         linkElements = updateLinks(svg, graph);
         nodeElements = updateNodes(svg, force, graph, onMouseOverNode, onMouseOutOfNode, whenClickedOnNode);
         force.nodes(graph.nodes).links(graph.links).start();
+    });
+    span.append("span").style({width: "20px", display: "inline-block"});
+
+    span.append("label").html("Min link strength: ");
+    var linkStrengthDropDown = span.append("select");
+    d3.range(7, 22).forEach(function (i) {
+        linkStrengthDropDown.append("option").attr("value", i).html(i);
+    });
+    linkStrengthDropDown.on("change", function() {
+        // TODO
     });
 
 
