--- a/templates/calendar-view.html
+++ b/templates/calendar-view.html
@@ -27,6 +27,7 @@
     .calendar-view .q8-10{fill: rgb(91,144,188)}
     .calendar-view .q9-10{fill: rgb(70,130,180)} /*steelblue*/
 </style>
+<!--TODO take proper color palette from web even if there are less than 10 colors -->
 <body>
 <span id="calendar-view"></span>
 <script src="d3.v3.min.js"></script>
