--- a/templates/author-to-file-graph.html
+++ b/templates/author-to-file-graph.html
@@ -45,70 +45,70 @@
 
 const graph = {
 /*data_placeholder*/
-    "nodes": [{"name": "Stefan Birkner", "group": 1},
-        {"name": "dsaff <dsaff>", "group": 1},
-        {"name": "kbeck <kbeck>", "group": 1},
-        {"name": "David Saff", "group": 1},
-        {"name": "Stephen Connolly", "group": 1},
-        {"name": "egamma <egamma>", "group": 1},
-        {"name": "Tibor Digana", "group": 1},
-        {"name": "James Abley", "group": 1},
-        {"name": "rodolfoliviero", "group": 1},
-        {"name": "Daniel Rothmaler", "group": 1},
-        {"name": "KentBeck", "group": 1},
-        {"name": "Alistair A. Israel", "group": 1},
-        {"name": "Matthew Farwell", "group": 1},
-        {"name": "Paul Holser", "group": 1},
-        {"name": "Esko Luontola", "group": 1},
-        {"name": "acknowledgements.txt", "group": 2},
-        {"name": "Theories.java", "group": 2},
-        {"name": "BlockJUnit4ClassRunner.java", "group": 2},
-        {"name": "Parameterized.java", "group": 2},
-        {"name": "AllTests.java", "group": 2},
-        {"name": "StubbedTheories.java", "group": 2},
-        {"name": "ParallelComputer.java", "group": 2},
-        {"name": "pom.xml", "group": 2},
-        {"name": "TestMethod.java", "group": 2},
-        {"name": "JUnit4ClassRunner.java", "group": 2},
-        {"name": "Version.java", "group": 2},
-        {"name": "TestRunner.java", "group": 2},
-        {"name": "TestWatchman.java", "group": 2},
-        {"name": "build.xml", "group": 2}],
-    "links": [{"source": 0, "target": 15, "value": 19},
-        {"source": 1, "target": 16, "value": 12},
-        {"source": 1, "target": 17, "value": 11},
-        {"source": 1, "target": 18, "value": 10},
-        {"source": 2, "target": 19, "value": 9},
-        {"source": 1, "target": 20, "value": 9},
-        {"source": 3, "target": 21, "value": 9},
-        {"source": 4, "target": 22, "value": 9},
-        {"source": 1, "target": 23, "value": 8},
-        {"source": 1, "target": 24, "value": 8},
-        {"source": 3, "target": 25, "value": 8},
-        {"source": 5, "target": 26, "value": 7},
-        {"source": 3, "target": 27, "value": 7},
-        {"source": 3, "target": 28, "value": 7},
-        {"source": 1, "target": 19, "value": 13},
-        {"source": 2, "target": 26, "value": 6},
-        {"source": 2, "target": 16, "value": 5},
-        {"source": 2, "target": 18, "value": 5},
-        {"source": 2, "target": 17, "value": 5},
-        {"source": 2, "target": 23, "value": 4},
-        {"source": 2, "target": 24, "value": 4},
-        {"source": 6, "target": 22, "value": 3},
-        {"source": 7, "target": 21, "value": 2},
-        {"source": 8, "target": 15, "value": 2},
-        {"source": 9, "target": 15, "value": 2},
-        {"source": 2, "target": 20, "value": 1},
-        {"source": 10, "target": 25, "value": 1},
-        {"source": 11, "target": 25, "value": 1},
-        {"source": 9, "target": 25, "value": 1},
-        {"source": 10, "target": 27, "value": 1},
-        {"source": 11, "target": 28, "value": 1},
-        {"source": 9, "target": 28, "value": 1},
-        {"source": 12, "target": 28, "value": 1},
-        {"source": 13, "target": 15, "value": 1},
-        {"source": 14, "target": 15, "value": 1}]
+    "nodes": [{"name": "acknowledgements.txt", "group": 1},
+        {"name": "Theories.java", "group": 1},
+        {"name": "BlockJUnit4ClassRunner.java", "group": 1},
+        {"name": "Parameterized.java", "group": 1},
+        {"name": "AllTests.java", "group": 1},
+        {"name": "StubbedTheories.java", "group": 1},
+        {"name": "ParallelComputer.java", "group": 1},
+        {"name": "pom.xml", "group": 1},
+        {"name": "TestMethod.java", "group": 1},
+        {"name": "JUnit4ClassRunner.java", "group": 1},
+        {"name": "Version.java", "group": 1},
+        {"name": "TestRunner.java", "group": 1},
+        {"name": "TestWatchman.java", "group": 1},
+        {"name": "build.xml", "group": 1},
+        {"name": "Stefan Birkner", "group": 2},
+        {"name": "dsaff <dsaff>", "group": 2},
+        {"name": "kbeck <kbeck>", "group": 2},
+        {"name": "David Saff", "group": 2},
+        {"name": "Stephen Connolly", "group": 2},
+        {"name": "egamma <egamma>", "group": 2},
+        {"name": "Tibor Digana", "group": 2},
+        {"name": "James Abley", "group": 2},
+        {"name": "rodolfoliviero", "group": 2},
+        {"name": "Daniel Rothmaler", "group": 2},
+        {"name": "KentBeck", "group": 2},
+        {"name": "Alistair A. Israel", "group": 2},
+        {"name": "Matthew Farwell", "group": 2},
+        {"name": "Paul Holser", "group": 2},
+        {"name": "Esko Luontola", "group": 2}],
+    "links": [{"source": 14, "target": 0, "value": 19},
+        {"source": 15, "target": 1, "value": 12},
+        {"source": 15, "target": 2, "value": 11},
+        {"source": 15, "target": 3, "value": 10},
+        {"source": 16, "target": 4, "value": 9},
+        {"source": 15, "target": 5, "value": 9},
+        {"source": 17, "target": 6, "value": 9},
+        {"source": 18, "target": 7, "value": 9},
+        {"source": 15, "target": 8, "value": 8},
+        {"source": 15, "target": 9, "value": 8},
+        {"source": 17, "target": 10, "value": 8},
+        {"source": 19, "target": 11, "value": 7},
+        {"source": 17, "target": 12, "value": 7},
+        {"source": 17, "target": 13, "value": 7},
+        {"source": 15, "target": 4, "value": 13},
+        {"source": 16, "target": 11, "value": 6},
+        {"source": 16, "target": 1, "value": 5},
+        {"source": 16, "target": 3, "value": 5},
+        {"source": 16, "target": 2, "value": 5},
+        {"source": 16, "target": 8, "value": 4},
+        {"source": 16, "target": 9, "value": 4},
+        {"source": 20, "target": 7, "value": 3},
+        {"source": 21, "target": 6, "value": 2},
+        {"source": 22, "target": 0, "value": 2},
+        {"source": 23, "target": 0, "value": 2},
+        {"source": 16, "target": 5, "value": 1},
+        {"source": 24, "target": 10, "value": 1},
+        {"source": 25, "target": 10, "value": 1},
+        {"source": 23, "target": 10, "value": 1},
+        {"source": 24, "target": 12, "value": 1},
+        {"source": 25, "target": 13, "value": 1},
+        {"source": 23, "target": 13, "value": 1},
+        {"source": 26, "target": 13, "value": 1},
+        {"source": 27, "target": 0, "value": 1},
+        {"source": 28, "target": 0, "value": 1}]
         /*data_placeholder*/
 };
 var projectName = /*project_name_placeholder*/"junit"/*project_name_placeholder*/;
