--- a/templates/files-in-same-commit-graph.html
+++ b/templates/files-in-same-commit-graph.html
@@ -40,7 +40,7 @@
 </style>
 <body>
 <script src="d3.v3.min.js"></script>
-<span id="files-in-same-commit-graph"></span>
+<span id="rootElement"></span>
 <script>
 
 const graph = {
@@ -133,6 +133,8 @@ const graph = {
 /*data_placeholder*/
 };
 var projectName = /*project_name_placeholder*/"some project"/*project_name_placeholder*/;
+var graphName = "Files in the same commit";
+
 
 function createForcesGraphOn(elementId, graph) {
     function QuickFind(size) {
@@ -212,13 +214,14 @@ function createForcesGraphOn(elementId, graph) {
     var showLongFileNames = false;
     var gravity = -120;
     var minClusterSize = 2;
-    var minLinkStrength = 7;
+    var linkValuesExtent = d3.extent(graph.links, function (link) { return link.value; })
+    var minLinkStrength = linkValuesExtent[0];
     var force = createForce(gravity);
 
     var rootElement = d3.select("#" + elementId);
 
     var header = appendBlockElementTo(rootElement, width);
-    header.append("h2").text("Files in the same commit (" + projectName + ")").style({"text-align": "center"});
+    header.append("h2").text(graphName + " (" + projectName + ")").style({"text-align": "center"});
 
     var svg = rootElement.append("svg").attr("width", width).attr("height", height);
     var svgLinks = svg.append("g");
@@ -245,7 +248,7 @@ function createForcesGraphOn(elementId, graph) {
     if (graph.nodes.length == 0)
         rootElement.append("div")
                 .attr("class", "tooltip")
-                .html("Unfortunately, there is nothing to show.<br/>It looks like there are no files commited at the same time very often.")
+                .html("Unfortunately, there is nothing to show.")
                 .style("position", "absolute")
                 .style("top", function (){ return svgPos.top + (svgPos.height / 2) - (this.offsetHeight / 2) + "px"; })
                 .style("left", function (){ return svgPos.left + (svgPos.width / 2) - (this.offsetWidth / 2) + "px"; });
@@ -353,7 +356,7 @@ function createForcesGraphOn(elementId, graph) {
 
     span.append("label").html("Min link strength: ");
     var linkStrengthDropDown = span.append("select");
-    d3.range(7, 22).forEach(function (i) {
+    d3.range(linkValuesExtent[0], linkValuesExtent[1]).forEach(function (i) {
         linkStrengthDropDown.append("option").attr("value", i).html(i);
     });
     linkStrengthDropDown.on("change", function() {
@@ -377,7 +380,6 @@ function createForcesGraphOn(elementId, graph) {
                 .data(graph.nodes, byNodeName)
                 .enter().append("circle")
                 .attr("class", "node")
-                .html("aaa")
                 .attr("r", function(d){ return d.selected ? 7 : 5; })
                 .style("fill", function (d) { return color(d.group); })
                 .call(force.drag)
@@ -461,7 +463,7 @@ function createForcesGraphOn(elementId, graph) {
     function byLinkState(link) { return "" + link.source.index + "-" + link.target.index; }
 }
 
-createForcesGraphOn("files-in-same-commit-graph", graph);
+createForcesGraphOn("rootElement", graph);
 
 </script>
 </body>
