--- a/templates/author-to-file-graph.html
+++ b/templates/author-to-file-graph.html
@@ -40,12 +40,13 @@
 </style>
 <body>
 <script src="d3.v3.min.js"></script>
-<span id="files-in-same-commit-graph"></span>
+<span id="rootElement"></span>
 <script>
 
 const graph = {
 /*data_placeholder*/
-    "nodes": [{"name": "acknowledgements.txt", "group": 1},
+    "nodes": [
+        {"name": "acknowledgements.txt", "group": 1},
         {"name": "Theories.java", "group": 1},
         {"name": "BlockJUnit4ClassRunner.java", "group": 1},
         {"name": "Parameterized.java", "group": 1},
@@ -60,11 +61,11 @@ const graph = {
         {"name": "TestWatchman.java", "group": 1},
         {"name": "build.xml", "group": 1},
         {"name": "Stefan Birkner", "group": 2},
-        {"name": "dsaff <dsaff>", "group": 2},
-        {"name": "kbeck <kbeck>", "group": 2},
+        {"name": "dsaff", "group": 2},
+        {"name": "kbeck", "group": 2},
         {"name": "David Saff", "group": 2},
         {"name": "Stephen Connolly", "group": 2},
-        {"name": "egamma <egamma>", "group": 2},
+        {"name": "egamma", "group": 2},
         {"name": "Tibor Digana", "group": 2},
         {"name": "James Abley", "group": 2},
         {"name": "rodolfoliviero", "group": 2},
@@ -74,7 +75,8 @@ const graph = {
         {"name": "Matthew Farwell", "group": 2},
         {"name": "Paul Holser", "group": 2},
         {"name": "Esko Luontola", "group": 2}],
-    "links": [{"source": 14, "target": 0, "value": 19},
+    "links": [
+        {"source": 14, "target": 0, "value": 19},
         {"source": 15, "target": 1, "value": 12},
         {"source": 15, "target": 2, "value": 11},
         {"source": 15, "target": 3, "value": 10},
@@ -112,6 +114,7 @@ const graph = {
         /*data_placeholder*/
 };
 var projectName = /*project_name_placeholder*/"junit"/*project_name_placeholder*/;
+var graphName = "Committers changing same files";
 
 function createForcesGraphOn(elementId, graph) {
     function QuickFind(size) {
@@ -121,7 +124,7 @@ function createForcesGraphOn(elementId, graph) {
             this.connections[i] = i;
         }
     }
-    QuickFind.prototype.connect =  function(p1, p2) {
+    QuickFind.prototype.connect = function(p1, p2) {
         var p1Root = this.rootOf(this.connections[p1]);
         var p2Root = this.rootOf(this.connections[p2]);
         for (var i = 0; i < this.connections.length; i++) {
@@ -130,46 +133,88 @@ function createForcesGraphOn(elementId, graph) {
     };
     QuickFind.prototype.rootOf = function(p) { return this.connections[p] == p ? p : this.rootOf(this.connections[p]); };
     QuickFind.prototype.areConnected = function(p1, p2) { return this.connections[p1] == this.connections[p2]; };
-    const quickFind = new QuickFind(graph.nodes.length);
-    graph.links.forEach(function (link) {
-        quickFind.connect(link.source, link.target);
-    });
+    function createQuickFindIndex(graph) {
+        var quickFind = new QuickFind(graph.nodes.length);
+        graph.links.forEach(function (link) {
+            quickFind.connect(graph.nodes.indexOf(link.source), graph.nodes.indexOf(link.target));
+        });
+        return quickFind;
+    }
 
+    function GraphEditor(graph) {
+        this.graph = graph;
+        this.deletions = [];
+        this.quickFind = createQuickFindIndex(graph);
+    }
+    GraphEditor.prototype.deleteLinks = function(linksToRemove) {
+        this.deletions.push({links: linksToRemove});
+        this.graph.links = this.graph.links.filter(function(link) { return linksToRemove.indexOf(link) == -1; });
+
+        this.quickFind = createQuickFindIndex(this.graph);
+    };
+    GraphEditor.prototype.deleteNodes = function(nodes) {
+        for (var i = 0; i < nodes.length; i++) {
+            this.delete(nodes[i]);
+        }
+        this.quickFind = createQuickFindIndex(this.graph);
+    };
+    GraphEditor.prototype.delete = function(nodeToRemove) {
+        var nodeIndex = this.graph.nodes.indexOf(nodeToRemove);
+        var linksToRemove = this.graph.links.filter(function(link) { return link.source == nodeToRemove || link.target == nodeToRemove; });
+
+        this.deletions.push({nodeIndex: nodeIndex, node: nodeToRemove, links: linksToRemove});
+
+        this.graph.nodes = this.graph.nodes.filter(function(node) { return node != nodeToRemove; });
+        this.graph.links = this.graph.links.filter(function(link) { return linksToRemove.indexOf(link) == -1; });
+    };
+    GraphEditor.prototype.undoAllDeletions = function () {
+        while (this.deletions.length > 0) {
+            var deletion = this.deletions.pop();
+
+            if (deletion.node != null) {
+                this.graph.nodes = this.graph.nodes.concat([deletion.node]);
+                deletion.node.index = this.graph.nodes.length - 1;
+            }
+
+            this.graph.links = this.graph.links.concat(deletion.links);
+        }
+        this.quickFind = createQuickFindIndex(this.graph);
+    };
+    GraphEditor.prototype.nodesConnectedTo = function(node) {
+        var quickFind = this.quickFind;
+        return this.graph.nodes.filter(function(eachNode) {
+            return quickFind.areConnected(eachNode.index, node.index);
+        });
+    };
 
     var width = 1100,
         height = 700;
 
     var color = d3.scale.category20();
-
-    var force = d3.layout.force()
-            .charge(-120)
-            .linkDistance(30)
-            .size([width, height]);
+    var showLongFileNames = false;
+    var gravity = -120;
+    var minClusterSize = 2;
+    var linkValuesExtent = d3.extent(graph.links, function (link) { return link.value; })
+    var minLinkStrength = linkValuesExtent[0];
+    var force = createForce(gravity);
 
     var rootElement = d3.select("#" + elementId);
 
     var header = appendBlockElementTo(rootElement, width);
-    header.append("h2").text("Comitters changing same files graph (" + projectName + ")").style({"text-align": "center"});
+    header.append("h2").text(graphName + " (" + projectName + ")").style({"text-align": "center"});
 
-    var svg = rootElement.append("svg")
-            .attr("width", width).attr("height", height);
+    var svg = rootElement.append("svg").attr("width", width).attr("height", height);
+    var svgLinks = svg.append("g");
+    var svgNodes = svg.append("g");
     var svgPos = svg[0][0].getBoundingClientRect();
 
     svg.append("rect")
             .attr("width", width).attr("height", height)
             .style({fill: "none", stroke: "#AAAAAA"});
 
-    force.nodes(graph.nodes)
-            .links(graph.links)
-            .start();
+    force.nodes(graph.nodes).links(graph.links).start();
+    var graphEditor = new GraphEditor(graph);
 
-    var link = svg.selectAll(".link")
-            .data(graph.links)
-            .enter().append("line")
-            .attr("class", "link")
-            .style("stroke-width", function (d) {
-                return Math.sqrt(d.value);
-            });
 
     var tooltip = rootElement.append("div")
             .attr("class", "tooltip")
@@ -183,70 +228,222 @@ function createForcesGraphOn(elementId, graph) {
     if (graph.nodes.length == 0)
         rootElement.append("div")
                 .attr("class", "tooltip")
-                .html("Unfortunately, there is nothing to show.<br/>It looks like there are no files commited at the same time very often.")
+                .html("Unfortunately, there is nothing to show.")
                 .style("position", "absolute")
                 .style("top", function (){ return svgPos.top + (svgPos.height / 2) - (this.offsetHeight / 2) + "px"; })
                 .style("left", function (){ return svgPos.left + (svgPos.width / 2) - (this.offsetWidth / 2) + "px"; });
 
-
     var handledByNode = false;
-    var node = svg.selectAll(".node")
-            .data(graph.nodes)
-            .enter().append("circle")
-            .attr("class", "node")
-            .attr("r", function(d){ return d.selected ? 7 : 5; })
-            .style("fill", function (d) { return color(d.group); })
-            .call(force.drag)
-            .on("mouseover", function(d) {
-                tooltip.html(d.name)
-                        .style("opacity", .9)
-                        .style("position", "absolute")
-                        .style("left", svgPos.left + parseInt(d.x + 18) + "px")
-                        .style("top", svgPos.top + parseInt(d.y - 12) + "px");
-            })
-            .on("mouseout", function(d) {
-                tooltip.style("opacity", .0);
-            })
-            .on("click", function (d) {
-                var connectedNodes = graph.nodes.filter(function(eachNode) { return quickFind.areConnected(eachNode.index, d.index); });
-                updateSelection(connectedNodes);
+    var onMouseOverNode = function (d) {
+        tooltip.html(showLongFileNames ? d.name : dropPath(d.name))
+                .style("opacity", .9)
+                .style("position", "absolute")
+                .style("left", svgPos.left + parseInt(d.x + 18) + "px")
+                .style("top", svgPos.top + parseInt(d.y - 12) + "px");
+    };
+    var onMouseOutOfNode = function() {
+        tooltip.style("opacity", .0);
+    };
+    var whenClickedOnNode = function (node) {
+        var shouldRemoveNode = d3.event.altKey && !d3.event.shiftKey;
+        var shouldRemoveNodeCluster = d3.event.altKey && d3.event.shiftKey;
 
-                handledByNode = true;
-            });
+        if (shouldRemoveNode) {
+            updateSelection([], showLongFileNames);
+            tooltip.style("opacity", .0);
+
+            graphEditor.deleteNodes([node]);
+
+            linkElements = updateLinks(svgLinks, graph);
+            nodeElements = updateNodes(svgNodes, force, graph, onMouseOverNode, onMouseOutOfNode, whenClickedOnNode);
+            force.nodes(graph.nodes).links(graph.links).start();
+
+        } else if (shouldRemoveNodeCluster) {
+            updateSelection([], showLongFileNames);
+            tooltip.style("opacity", .0);
+
+            graphEditor.deleteNodes(graphEditor.nodesConnectedTo(node));
+
+            linkElements = updateLinks(svgLinks, graph);
+            nodeElements = updateNodes(svgNodes, force, graph, onMouseOverNode, onMouseOutOfNode, whenClickedOnNode);
+            force.nodes(graph.nodes).links(graph.links).start();
+        } else {
+            updateSelection(graphEditor.nodesConnectedTo(node), showLongFileNames);
+        }
+
+        handledByNode = true;
+    };
+    var linkElements = updateLinks(svgLinks, graph);
+    var nodeElements = updateNodes(svgNodes, force, graph, onMouseOverNode, onMouseOutOfNode, whenClickedOnNode);
+
+
     svg.on("click", function () {
         if (handledByNode) {
             handledByNode = false;
             return;
         }
-        updateSelection([]);
+        updateSelection([], showLongFileNames);
     });
 
-    force.on("tick", function () {
-        link.attr("x1", function (d) { return d.source.x; })
-                .attr("y1", function (d) { return d.source.y; })
-                .attr("x2", function (d) { return d.target.x; })
-                .attr("y2", function (d) { return d.target.y; });
-        node.attr("cx", function (d) { return d.x; })
-                .attr("cy", function (d) { return d.y; });
+    var onForceTick = function () {
+        linkElements
+                .attr("x1", function(d) { return d.source.x; })
+                .attr("y1", function(d) { return d.source.y; })
+                .attr("x2", function(d) { return d.target.x; })
+                .attr("y2", function(d) { return d.target.y; });
+        nodeElements
+                .attr("cx", function(d) { return d.x; })
+                .attr("cy", function(d) { return d.y; });
+    };
+    force.on("tick", onForceTick);
+
+
+    var footerSpan = appendBlockElementTo(rootElement, width);
+    var span = footerSpan.append("span").style({float: "right"});
+    span.append("label").html("Show file path:");
+    span.append("input").attr("type", "checkbox")
+            .on("click", function() { showLongFileNames = !showLongFileNames; });
+    span.call(addDelimiter);
+
+    span.append("label").html("Gravity: ");
+    var gravityDropDown = span.append("select");
+    gravityDropDown.append("option").attr("value", "high").html("High");
+    gravityDropDown.append("option").attr("value", "medium").attr("selected", "true").html("Medium");
+    gravityDropDown.append("option").attr("value", "low").html("Low");
+
+    gravityDropDown.on("change", function () {
+        if (this.value == "high") gravity = -50;
+        else if (this.value == "medium") gravity = -120;
+        else if (this.value == "low") gravity = -320;
+
+        force = createForce(gravity);
+        force.on("tick", onForceTick);
+        force.nodes(graph.nodes).links(graph.links).start();
+        svg.selectAll(".node").call(force.drag);
+    });
+    span.call(addDelimiter);
+
+    span.append("label").html("Min cluster size: ");
+    var clusterSizeDropDown = span.append("select");
+    d3.range(2, 11).forEach(function (i) {
+        clusterSizeDropDown.append("option").attr("value", i).html(i);
+    });
+    clusterSizeDropDown.on("change", function () {
+        minClusterSize = +this.value;
+        filterNodes();
+    });
+    span.call(addDelimiter);
+
+    span.append("label").html("Min link strength: ");
+    var linkStrengthDropDown = span.append("select");
+    d3.range(linkValuesExtent[0], linkValuesExtent[1]).forEach(function (i) {
+        linkStrengthDropDown.append("option").attr("value", i).html(i);
+    });
+    linkStrengthDropDown.on("change", function() {
+        minLinkStrength = +this.value;
+        filterNodes();
     });
 
 
-    function updateSelection(selectedNodes) {
+    var subFooterSpan = appendBlockElementTo(rootElement, width);
+    subFooterSpan.append("span").style({float: "left"})
+            .append("div").style("color", "#999")
+            .html("alt+click or alt+shift+click to remove node or group of nodes");
+
+
+    function createForce(gravity) {
+        return d3.layout.force().charge(gravity).linkDistance(30).size([width, height]);
+    }
+
+    function updateNodes(svg, force, graph, onMouseOverNode, onMouseOutOfNode, whenClickedOnNode) {
+        svg.selectAll(".node")
+                .data(graph.nodes, byNodeName)
+                .enter().append("circle")
+                .attr("class", "node")
+                .attr("r", function(d){ return d.selected ? 7 : 5; })
+                .style("fill", function (d) { return color(d.group); })
+                .call(force.drag)
+                .on("mouseover", onMouseOverNode)
+                .on("mouseout", onMouseOutOfNode)
+                .on("click", whenClickedOnNode);
+        svg.selectAll(".node")
+                .data(graph.nodes, byNodeName)
+                .exit().remove();
+        return svg.selectAll(".node");
+    }
+
+    function updateLinks(svg, graph) {
+        svg.selectAll(".link")
+                .data(graph.links, byLinkState)
+                .enter().append("line")
+                .attr("class", "link")
+                .style("stroke-width", function (d) { return Math.sqrt(d.value); });
+        svg.selectAll(".link")
+                .data(graph.links, byLinkState)
+                .exit().remove();
+        return svg.selectAll(".link");
+    }
+
+    function filterNodes() {
+        updateSelection([], showLongFileNames);
+        tooltip.style("opacity", .0);
+
+        graphEditor.undoAllDeletions();
+        graphEditor.deleteLinks(linksWithStrengthLessThan(minLinkStrength, graph));
+        graphEditor.deleteNodes(nodesInClustersSmallerThan(minClusterSize, graph, graphEditor));
+
+        linkElements = updateLinks(svgLinks, graph);
+        nodeElements = updateNodes(svgNodes, force, graph, onMouseOverNode, onMouseOutOfNode, whenClickedOnNode);
+        force.nodes(graph.nodes).links(graph.links).start();
+    }
+
+    function linksWithStrengthLessThan(minLinkStrength, graph) {
+        return graph.links.filter(function (link) { return link.value < minLinkStrength; })
+    }
+
+    function nodesInClustersSmallerThan(maxClusterSize, graph, graphEditor) {
+        var visitedNodes = [];
+        var nodes = [];
+        graph.nodes.forEach(function (node) {
+            if (visitedNodes.indexOf(node) >= 0) return;
+
+            var connectedNodes = graphEditor.nodesConnectedTo(node);
+            if (connectedNodes.length < maxClusterSize) {
+                nodes = nodes.concat(connectedNodes);
+            }
+            visitedNodes = visitedNodes.concat(connectedNodes);
+        });
+        return nodes;
+    }
+
+    function updateSelection(selectedNodes, showLongFileNames) {
         graph.nodes.forEach(function (eachNode) { eachNode.selected = false; });
         selectedNodes.forEach(function (eachNode) { eachNode.selected = true; });
-        node.data(graph.nodes).attr("r", function(d){ return d.selected ? 7 : 5; });
+        nodeElements.data(graph.nodes, byNodeName).attr("r", function(d){ return d.selected ? 7 : 5; });
 
         selectedNodesLabel
-                .html(selectedNodes.map(function (d) { return d.name; }).sort().join("<br/>"))
+                .html(selectedNodes.map(function (d) { return showLongFileNames ? d.name : dropPath(d.name); }).sort().join("<br/>"))
                 .style("opacity", (selectedNodes.length > 0 ? 1 : 0));
+    }
+
+    function dropPath(fileName) {
+        var i = fileName.lastIndexOf("/");
+        return (i == -1) ? fileName : fileName.substring(i + 1)
     }
 
     function appendBlockElementTo(element, width) {
         return element.append("span").style({display: "block", width: width + "px"});
     }
+
+    function addDelimiter(span) {
+        span.append("span").style({width: "20px", display: "inline-block"});
+    }
+
+    function byNodeName(node) { return node.name; }
+    function byLinkState(link) { return "" + link.source.index + "-" + link.target.index; }
 }
 
-createForcesGraphOn("files-in-same-commit-graph", graph);
+createForcesGraphOn("rootElement", graph);
 
 </script>
 </body>
