--- a/templates/treemap.html
+++ b/templates/treemap.html
@@ -111,7 +111,7 @@
 
         var footer = appendBlockElementTo(chart, w).attr("id", "footer");
         var packageNameLabel = footer.append("div");
-        footer.append("div").attr("class", "hint").html("click or alt-click to descend or ascend");
+        footer.append("div").attr("class", "hint").html("click or alt+click to descend or ascend");
 
         var tooltip = rootElement.append("div")
                 .attr("class", "tooltip")
